# transical

./: README.md  meta.py  pyproject.toml  test.ics
docs/: filter-expressions.md  general.md
src/transical/: main.py
src/transical/lib/: cli_types.py  filter_compiler.py  utils.py
tools/: build.py  compile_manpages.py
tools/lib/: pandoc_filter.py
typings/partridge/: __init__.pyi  config.pyi  geo.pyi  gtfs.pyi  parsers.pyi  readers.pyi  types.pyi  utilities.pyi  writers.pyi
