[project]
name = "transical"
version = "0.1.0"
description = "Turn GTFS schedules into calendar events"
readme = "README.md"
license = "GPL-3.0-or-later"
license-files = ["LICENSE.md"]
requires-python = ">=3.13"
dependencies = [
    "auto-click-auto>=0.1.5",
    "click>=8.4.2",
    "icalendar>=7.2.0",
    "isodate>=0.7.2",
    "more-itertools>=11.1.0",
    "pandas>=3.0.3",
    "partridge>=1.1.2",
    "pyparsing>=3.3.2",
    "requests>=2.34.2",
    "simple-term-menu>=1.6.6",
]


[dependency-groups]
dev = [
    "pandas-stubs>=3.0.3.260530",
    "isort>=8.0.1",
    "black>=26.5.1",
    "hatchling>=1.30.1",
    "pypandoc-binary>=1.17",
    "python-frontmatter>=1.3.0",
    "panflute>=2.3.1",
]


[project.scripts]
transical = "transical.main:cli"


[build-system]
requires = [
    "hatchling>=1.30.1",
    "pypandoc-binary>=1.17",
    "python-frontmatter>=1.3.0",
    "panflute>=2.3.1",
]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/transical"]

[tool.hatch.build.targets.sdist]
include = ["src", "tools", "docs", "meta.py"]
exclude = ["typings", "**/__pycache__"]

[tool.hatch.build.targets.wheel.force-include]
"meta.py" = "meta.py"

[tool.hatch.build.targets.wheel.shared-data]
"build/man" = "share/man"


[tool.hatch.build.hooks.custom]
path = "tools/build.py"
